[gd_scene load_steps=10 format=3 uid="uid://ctakbenas6ebq"]

[ext_resource type="Script" uid="uid://3ttpi45ik3f6" path="res://scripts/tree.gd" id="1_dmmp0"]
[ext_resource type="PackedScene" uid="uid://b0v2euxs4rwva" path="res://scenes/background.tscn" id="2_m26wl"]
[ext_resource type="PackedScene" uid="uid://ckjou60itce2u" path="res://scenes/sequence_player.tscn" id="3_5yujg"]
[ext_resource type="Texture2D" uid="uid://bcwcjjufin6ja" path="res://sprites/the-end.png" id="4_r7adx"]
[ext_resource type="PackedScene" uid="uid://dwgq1acfvn16j" path="res://scenes/constraints_list.tscn" id="5_xprpn"]
[ext_resource type="Texture2D" uid="uid://davdlrfbvs2us" path="res://sprites/icon_c.png" id="6_2bmcu"]
[ext_resource type="FontFile" uid="uid://cmwhpb6lbgalg" path="res://fonts/vhs-vcr-osd.ttf" id="7_528u0"]

[sub_resource type="Environment" id="Environment_hy4hq"]
glow_enabled = true

[sub_resource type="Theme" id="Theme_bcqui"]
default_font = ExtResource("7_528u0")

[node name="Tree" type="CanvasLayer" node_paths=PackedStringArray("colour_container", "constraints_list", "sequence_player")]
script = ExtResource("1_dmmp0")
colour_container = NodePath("MainMargin/HBoxContainer/LeftContainer/ColourContainer")
constraints_list = NodePath("MainMargin/HBoxContainer/ConstraintsList")
sequence_player = NodePath("SequencePlayer")

[node name="Background" parent="." instance=ExtResource("2_m26wl")]

[node name="SequencePlayer" parent="." instance=ExtResource("3_5yujg")]

[node name="TheEnd" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(254, 135)
texture = ExtResource("4_r7adx")

[node name="MainMargin" type="MarginContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 640.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MainMargin"]
layout_mode = 2
alignment = 1

[node name="LeftContainer" type="VBoxContainer" parent="MainMargin/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColourContainer" type="HBoxContainer" parent="MainMargin/HBoxContainer/LeftContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="ConstraintsList" parent="MainMargin/HBoxContainer" instance=ExtResource("5_xprpn")]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="drag_icon" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.47843137)
custom_minimum_size = Vector2(8, 8)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -14.0
offset_right = 17.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 23)
mouse_filter = 2
texture = ExtResource("6_2bmcu")
expand_mode = 4
stretch_mode = 5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hy4hq")

[node name="Tutorial1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial1"]
layout_mode = 0
offset_left = 586.0
offset_top = 436.0
offset_right = 1000.0
offset_bottom = 575.0
theme = SubResource("Theme_bcqui")
text = "Press space to play/check your sequence, if it's correct you'll move on to the next tier!"

[node name="RichTextLabel2" type="RichTextLabel" parent="Tutorial1"]
layout_mode = 0
offset_left = 581.0
offset_top = 71.0
offset_right = 995.0
offset_bottom = 210.0
theme = SubResource("Theme_bcqui")
text = "Drag & drop lights onto the tree to build a sequence that satisfies the constraints"

[node name="Tutorial2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial2"]
layout_mode = 0
offset_left = 579.0
offset_top = 73.0
offset_right = 1105.0
offset_bottom = 241.0
theme = SubResource("Theme_bcqui")
text = "Sometimes constraints will give you some freedom, feel free to express your musical preferences through your decorations!"
