[gd_scene load_steps=14 format=3 uid="uid://ctakbenas6ebq"]

[ext_resource type="Script" uid="uid://3ttpi45ik3f6" path="res://tree.gd" id="1_brfkd"]
[ext_resource type="PackedScene" uid="uid://ikpcmbteetwm" path="res://tree_tile.tscn" id="2_gvmkm"]
[ext_resource type="PackedScene" uid="uid://tf7iltka61jk" path="res://tree_row.tscn" id="3_d2g23"]
[ext_resource type="PackedScene" uid="uid://daew471gtbf0p" path="res://light_button.tscn" id="4_44ud8"]
[ext_resource type="PackedScene" uid="uid://ckjou60itce2u" path="res://sequence_player.tscn" id="4_d2g23"]
[ext_resource type="Texture2D" uid="uid://ywxf450mfkfo" path="res://sprites/circ_0.png" id="5_oph6y"]
[ext_resource type="Texture2D" uid="uid://dyh40hh642jnp" path="res://sprites/circ_3.png" id="6_hy4hq"]
[ext_resource type="PackedScene" uid="uid://dwgq1acfvn16j" path="res://constraints_list.tscn" id="6_ind6k"]
[ext_resource type="Texture2D" uid="uid://b431nvnqcjxlc" path="res://sprites/circ_2.png" id="7_s00bo"]
[ext_resource type="Texture2D" uid="uid://b6spyeql7p8vg" path="res://sprites/circ_1.png" id="8_mkgly"]
[ext_resource type="Texture2D" uid="uid://b854gxnw7ywgj" path="res://sprites/SAMBEE STUDIOS.png" id="9_s00bo"]
[ext_resource type="Texture2D" uid="uid://ber8c88jbnh6b" path="res://sprites/2025 JAME GAM XMAS ED..png" id="10_mkgly"]
[ext_resource type="Texture2D" uid="uid://by6my4e7fwnr1" path="res://sprites/hole.png" id="11_mkgly"]

[node name="Tree" type="CanvasLayer" node_paths=PackedStringArray("tree_vbox_container", "colour_container", "constraints_list", "selected_colour", "sequence_player")]
script = ExtResource("1_brfkd")
tree_vbox_container = NodePath("MainMargin/HBoxContainer/VBoxContainer/TreeContainer")
colour_container = NodePath("MainMargin/HBoxContainer/VBoxContainer/ColourContainer")
constraints_list = NodePath("MainMargin/HBoxContainer/ConstraintsList")
selected_colour = NodePath("SelectedColour")
sequence_player = NodePath("SequencePlayer")
tree_tile = ExtResource("2_gvmkm")
tree_row = ExtResource("3_d2g23")
light_button = ExtResource("4_44ud8")

[node name="SelectedColour" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.25882354)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Deco" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="circ_3" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_top = 15.0
offset_bottom = 384.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("6_hy4hq")
stretch_mode = 4

[node name="circ_2" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -404.0
offset_top = -85.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("7_s00bo")
stretch_mode = 4

[node name="circ_1" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = -198.0
offset_right = 316.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("8_mkgly")
stretch_mode = 4

[node name="circ_0" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 1
offset_left = 19.0
offset_top = 24.0
offset_right = 359.0
offset_bottom = 345.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("5_oph6y")
stretch_mode = 4

[node name="label_0" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.56078434)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -11.0
offset_top = 59.0
offset_bottom = 221.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("9_s00bo")
expand_mode = 4
stretch_mode = 4

[node name="label_1" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.56078434)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.25
offset_top = -17.0
offset_right = 124.25
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("10_mkgly")
expand_mode = 2
stretch_mode = 4

[node name="hole_0" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.4627451)
layout_mode = 1
offset_right = 33.0
offset_bottom = 33.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("11_mkgly")
expand_mode = 2
stretch_mode = 4

[node name="hole_1" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.4627451)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -33.0
offset_right = 33.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("11_mkgly")
expand_mode = 2
stretch_mode = 4

[node name="hole_2" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.4627451)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -33.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("11_mkgly")
expand_mode = 2
stretch_mode = 4

[node name="hole_3" type="TextureRect" parent="MarginContainer/Deco"]
modulate = Color(1, 1, 1, 0.4627451)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_bottom = 33.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("11_mkgly")
expand_mode = 2
stretch_mode = 4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(354, 221)

[node name="SequencePlayer" parent="." instance=ExtResource("4_d2g23")]

[node name="MainMargin" type="MarginContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 640.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MainMargin"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TreeContainer" type="VBoxContainer" parent="MainMargin/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ColourContainer" type="HBoxContainer" parent="MainMargin/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="ConstraintsList" parent="MainMargin/HBoxContainer" instance=ExtResource("6_ind6k")]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
